# Django-test

./: Dockerfile  Jenkinsfile  db.sqlite3  default.conf  docker-compose.blue.yaml  docker-compose.blue.yml  docker-compose.green.yaml  docker-compose.green.yml  docker-compose.yml  gunicorn.conf.py  manage.py  pyproject.toml  service-url.inc
app/: db.sqlite3
app/api/: router.py
app/api/v1/: v1_router.py
app/api/v1/endpoints/: test.py
app/core/: asgi.py  settings.py  wsgi.py
app/schemas/v1/: test.py
